add get users in keycloak driver
