# docs/swagger.json
@@ -233,6 +233,43 @@
                 }
             }
         },
+        "/drivers/": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "drivers"
+                ],
+                "summary": "Get drivers",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_route.ListDriverDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/route/": {
             "get": {
                 "consumes": [
@@ -498,6 +535,29 @@
                 }
             }
         },
+        "bus-service_internal_biz.Driver": {
+            "type": "object",
+            "properties": {
+                "bus": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "string"
+                },
+                "route": {
+                    "type": "string"
+                }
+            }
+        },
         "bus-service_internal_biz.Route": {
             "type": "object",
             "properties": {
@@ -575,6 +635,17 @@
                 },
                 "count": {
                     "type": "integer"
+                }
+            }
+        },
+        "internal_route.ListDriverDTO": {
+            "type": "object",
+            "properties": {
+                "drivers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/bus-service_internal_biz.Driver"
+                    }
                 }
             }
         },
